WIP: Update metasploit-framework to 4.16.8

--- a/security/metasploit-framework/Makefile
+++ b/security/metasploit-framework/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 
 GITHUB_PROJECT=	metasploit-framework
-GITHUB_TAG=	4.12.15
+GITHUB_TAG=	4.16.8
 DISTNAME=	${GITHUB_TAG}
 PKGNAME=	${GITHUB_PROJECT}-${GITHUB_TAG}
 CATEGORIES=	security
@@ -35,6 +35,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-pcaprub-[0-9]*:../../net/ruby-pcaprub
 DEPENDS+=	${RUBY_PKGPREFIX}-pg-[0-9]*:../../databases/ruby-pg
 DEPENDS+=	${RUBY_PKGPREFIX}-railties42-[0-9]*:../../devel/ruby-railties42
 DEPENDS+=	${RUBY_PKGPREFIX}-recog-[0-9]*:../../net/ruby-recog
+DEPENDS+=	${RUBY_PKGPREFIX}-rubyntlm-[0-9]*:../../security/ruby-rubyntlm
 DEPENDS+=	${RUBY_PKGPREFIX}-openssl-ccm-[0-9]*:../../security/ruby-openssl-ccm
 DEPENDS+=	${RUBY_PKGPREFIX}-octokit-[0-9]*:../../devel/ruby-octokit
 DEPENDS+=	${RUBY_PKGPREFIX}-redcarpet-[0-9]*:../../textproc/ruby-redcarpet
@@ -42,7 +43,15 @@ DEPENDS+=	${RUBY_PKGPREFIX}-patch_finder-[0-9]*:../../security/ruby-patch_finder
 DEPENDS+=	${RUBY_PKGPREFIX}-tzinfo-data-[0-9]*:../../time/ruby-tzinfo-data
 DEPENDS+=	${RUBY_PKGPREFIX}-sshkey-[0-9]*:../../security/ruby-sshkey
 DEPENDS+=	${RUBY_PKGPREFIX}-bit-struct-[0-9]*:../../devel/ruby-bit-struct
+DEPENDS+=	${RUBY_PKGPREFIX}-windows_error-[0-9]*:../../devel/ruby-bit-struct
+DEPENDS+=	${RUBY_PKGPREFIX}-pdf-reader-[0-9]*:../../print/ruby-pdf-reader
+DEPENDS+=	${RUBY_PKGPREFIX}-dnsruby-[0-9]*:../../net/ruby-dnsruby
 DEPENDS+=	${RUBY_PKGPREFIX}-net-ssh-[0-9]*:../../security/ruby-net-ssh
+DEPENDS+=	${RUBY_PKGPREFIX}-rbnacl-[0-9]*:../../security/ruby-rbnacl
+DEPENDS+=	${RUBY_PKGPREFIX}-rbnacl-libsodium-[0-9]*:../../security/ruby-rbnacl-libsodium
+DEPENDS+=	${RUBY_PKGPREFIX}-bcrypt_pbkdf-[0-9]*:../../security/ruby-bcrypt_pbkdf
+DEPENDS+=	${RUBY_PKGPREFIX}-ruby_smb-[0-9]*:../../net/ruby-ruby_smb
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-core-[0-9]*:../../security/ruby-rex-core
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-text-[0-9]*:../../security/ruby-rex-text
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-random_identifier-[0-9]*:../../security/ruby-rex-random_identifier
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-powershell-[0-9]*:../../security/ruby-rex-powershell
@@ -50,13 +59,25 @@ DEPENDS+=	${RUBY_PKGPREFIX}-rex-zip-[0-9]*:../../security/ruby-rex-zip
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-registry-[0-9]*:../../security/ruby-rex-registry
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-java-[0-9]*:../../security/ruby-rex-java
 DEPENDS+=	${RUBY_PKGPREFIX}-rex-struct2-[0-9]*:../../security/ruby-rex-struct2
-DEPENDS+=	${RUBY_PKGPREFIX}-robots-[0-9]*:../../www/ruby-robots
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-arch-[0-9]*:../../security/ruby-rex-arch
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-ole-[0-9]*:../../security/ruby-rex-ole
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-mime-[0-9]*:../../security/ruby-rex-mime
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-nop-[0-9]*:../../security/ruby-rex-nop
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-bin_tools-[0-9]*:../../security/ruby-rex-bin_tools
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-socket-[0-9]*:../../security/ruby-rex-socket
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-sslscan-[0-9]*:../../security/ruby-rex-sslscan
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-rop_builder-[0-9]*:../../security/ruby-rex-rop_builder
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-encoder-[0-9]*:../../security/ruby-rex-encoder
+DEPENDS+=	${RUBY_PKGPREFIX}-rex-exploitation-[0-9]*:../../security/ruby-rex-exploitation
+DEPENDS+=	${RUBY_PKGPREFIX}-rb-readline-[0-9]*:../../devel/ruby-rb-readline
 DEPENDS+=	${RUBY_PKGPREFIX}-zip-[0-9]*:../../archivers/ruby-zip
 DEPENDS+=	${RUBY_PKGPREFIX}-sqlite3-[0-9]*:../../databases/ruby-sqlite3
 DEPENDS+=	${RUBY_PKGPREFIX}-tzinfo-[0-9]*:../../time/ruby-tzinfo
 DEPENDS+=	${RUBY_PKGPREFIX}-filesize-[0-9]*:../../devel/ruby-filesize
-DEPENDS+=	${RUBY_PKGPREFIX}-bundler-[0-9]*:../../misc/ruby-bundler
-DEPENDS+=	${RUBY_PKGPREFIX}-rb-readline-r7-[0-9]*:../../devel/ruby-rb-readline-r7
+DEPENDS+=	${RUBY_PKGPREFIX}-openvas_omp-[0-9]*:../../security/ruby-openvas_omp
+DEPENDS+=	${RUBY_PKGPREFIX}-nessus_rest-[0-9]*:../../security/ruby-nessus_rest
+DEPENDS+=	${RUBY_PKGPREFIX}-nexpose-[0-9]*:../../security/ruby-nexpose
+DEPENDS+=	${RUBY_PKGPREFIX}-xdr-[0-9]*:../../net/ruby-xdr
 
 RUBY_VERSIONS_ACCEPTED=	24
 
